--- a/similar-products/docker-compose.yaml
+++ b/similar-products/docker-compose.yaml
@@ -33,6 +33,13 @@ services:
       - K6_OUT=influxdb=http://influxdb:8086/k6
     extra_hosts:
       - "host.docker.internal:host-gateway"
+  tests:
+    image: maven:3.9-eclipse-temurin-21
+    working_dir: /app
+    volumes:
+      - ./:/app
+      - ~/.m2:/root/.m2
+    command: mvn -B -e test
 
   app:
     build:
